# multi-chat

./: .gitignore  Cargo.toml  README.md
bench/: build-report.ps1  run-scenarios.ps1
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/loadtest/: Cargo.toml
crates/loadtest/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: REPORT.md
