[workspace]
members = [
    "crates/protocol",
    "crates/server",
    "crates/client",
    "crates/loadtest",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
